# live-bootcamp-project

./: CLAUDE.md  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/src/: main.rs
auth-service/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
auth-service/migrations/: 20250918085928_create_users_table.up.sql
auth-service/src/: domain.rs  lib.rs  main.rs  services.rs  test_helpers.rs
auth-service/src/domain/: app_state.rs  data_stores.rs  email.rs  email_client.rs  error.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: data_stores.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs  user_stores.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
