[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.35"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
validator = "0.20.0"

[dev-dependencies]
# quickcheck = "1.0.3" - TODO - update to later version
quickcheck = "0.9.2"
# quickcheck_macros = "1.1.0" - TODO - update to later version
quickcheck_macros = "0.9.1"
# fake = "4.4.0" - TODO - update to later version
fake = "=2.3.0"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
